# MolSim-WS25-GroupF

./: .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/modules/: clang-format.cmake  doxygen.cmake  google-test.cmake  openmp.cmake  spdlog.cmake  vtk.cmake  yaml-cpp.cmake
input/: assignment1.yaml  assignment2.yaml  assignment3.2.yaml  assignment3.yaml  assignment4.2_big.yaml  assignment4.2_small.yaml  assignment4.3_basin.yaml  assignment5.1.yaml  assignment5.3.yaml  assignment5.4.yaml  eingabe-cuboid.txt  jonah.yaml
material/: visualize_bins.py
src/: FileReader.cpp  FileReader.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  PlanetSimulation.cpp  PlanetSimulation.h  Settings.cpp  Settings.h  Simulation.h
src/LinkedCells/: Cell.h  LinkedCells.cpp  LinkedCells.h
src/inputReader/: CuboidReader.cpp  CuboidReader.h  FileReader.h  XYZReader.cpp  XYZReader.h  YAMLReader.cpp  YAMLReader.h
src/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h  YAMLWriter.h
src/particleContainers/: DirectSum.cpp  DirectSum.h  LinkedCellsContainer.cpp  LinkedCellsContainer.h  ParticleContainerV2.h
src/simulations/: CollisionSimulation.cpp  CollisionSimulation.h  CutoffSimulation.cpp  CutoffSimulation.h  MembraneSimulation.cpp  MembraneSimulation.h  Physics.h  PlanetSimulation.cpp  PlanetSimulation.h  Simulation.h  Thermostat.cpp  Thermostat.h  ThermostatSimulation.cpp  ThermostatSimulation.h
src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.h  ParticleGenerator.cpp  (+2 more)
test/: DummyTest.cpp  TestCutoffSimulation.cpp  TestCutoffSimulation.h  TestDirectSum.cpp  TestDirectSum.h  TestFileReader.cpp  TestLinkedCells.cpp  TestLinkedCells.h  TestParticleContainer.cpp  TestParticleContainer.h  TestParticleGenerator.cpp  TestPhysics.cpp  TestThermostatSimulation.cpp  TestThermostatSimulation.h  TestYAMLReader.cpp  TestYAMLReader.h
(+11 files in other folders)
